# win-expl

./: Cargo.toml  LICENSE  README.md  settings.json
.github/workflows/: build.yml  run-tests-search-engine.yml  run-tests.yml
src/: app.rs  event_handler.rs  lib.rs  main.rs  resource_manager.rs  ring_buffer.rs  settings.rs
src/components/: body.rs  control.rs  fav_dir_bar.rs  header.rs  header_control.rs  list.rs  menuable.rs  mod.rs  path_bar.rs  path_bar_control.rs  search_result_control.rs  status_bar.rs  status_bar_control.rs  window.rs
src/memory/: cache.rs  index.rs  mod.rs
src/search_engine/: mod.rs  parameter_parser.rs  result.rs
src/win/: file_attributes.rs  key_codes.rs  mod.rs
tests/: search_engine_tests.rs
