[package]
name = "win-expl"
version = "0.1.0"
edition = "2021"

[dependencies]
clipboard = "0.5.0"
nwg = { version = "^1.0.13", package = "native-windows-gui" }
open = "5.0.1"
time = { version = "0.3.30", features = ["formatting"] }
winapi = { version = "0.3.9", features = ["dwmapi"]}

[build-dependencies]
embed-manifest = "1"
